ui/single/task-priority-too-high.stderr
warning: unused import: `rtic::app`
 --> $DIR/task-priority-too-high.rs:3:5
  |
3 | use rtic::app;
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0080]: evaluation of constant value failed
 --> $DIR/task-priority-too-high.rs:5:1
  |
5 | #[rtic::app(device = lm3s6965)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `8_usize - 9_usize` which would overflow
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
